# Abandoned-Ancestry

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
basic/: BasicDrawable.cpp  BasicDrawable.hpp  BasicObject.cpp  BasicObject.hpp  DrawableRect.cpp  DrawableRect.hpp  GameObject.cpp  GameObject.hpp  IDrawable.hpp  ILogic.hpp  ILogicable.hpp  IObject.hpp  UniversalLogic.cpp  UniversalLogic.hpp
world/: GameManager.cpp  GameManager.hpp  World.cpp  World.hpp  WorldController.cpp  WorldController.hpp  WorldDrawer.cpp  WorldDrawer.hpp  WorldEvent.hpp  WorldObjectsBinder.cpp  WorldObjectsBinder.hpp  WorldSimulation.cpp  WorldSimulation.hpp
